<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CInLife</string>
    <string name="logo">Logo</string>
    <string name="company_name">CInGrous</string>
    <string name="google_signin_icon">google_signin_icon</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter email</string>
    <string name="logout">LogOut</string>
    <string name="add_student">Add Student</string>
    <string name="create_account">Create Account</string>
    <string name="time">Time</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_id">Email Id</string>
    <string name="Address">Address</string>
    <string name="workerimageview">WorkerImageView</string>
    <string name="date_pattern_in_duration">DD/MM/YYYY</string>
    <string name="cancel">Cancel</string>
    <string name="message">Place the QR Code between the Scanner</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="management">Management</string>
    <string name="student">Student</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender_at_add_worker">Gender :</string>
    <string name="success">Success</string>
    <string name="college">College</string>
    <string name="name_of_the_project">Name of the Project</string>
    <string name="addUserTitle">Add User</string>
    <string name="submit">Submit</string>
    <string name="today_s_activity">Today\'s Activity</string>
    <string name="welcome">Welcome</string>
    <string name="profile">Profile</string>
    <string name="capture_students_image">Capture Students Image</string>
    <string name="worker_type">Worker Type</string>
    <string name="manager">Manager</string>
    <string name="worker">Employee</string>
    <string name="view_student_profile">Student Profile</string>
    <string name="attendance_on">View Entry On : </string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="view_entry_on">View Entry On</string>
    <string name="type">Worker Type</string>
    <string name="user_profile_picture">User_Profile_picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="name_of_the_college">Name of the College</string>
    <string name="duration">Duration</string>
    <string name="activity">Activity:</string>
    <string name="users_profile">Users Profile</string>
</resources>