<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="25">

        <ImageButton
            android:id="@+id/student_photo_at_add_worker_tab_in_manager_login"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryText"
            android:contentDescription="@string/capture_students_image"
            android:onClick="open_camera"
            android:src="@drawable/add_photo" />

        <Button
            android:id="@+id/create_account_button_at_add_worker_tab_in_manager_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:onClick="create_user_account"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimaryText" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="80">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/name_of_the_student_yet_to_be_created"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:maxLength="30" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/college_of_the_student_yet_to_be_created"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/college"
                            android:maxLength="50" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/name_of_the_project_of_the_student_yet_to_be_created"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_of_the_project"
                            android:maxLength="40" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/address_of_the_new_student"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Address"
                            android:inputType="textMultiLine" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phone_number_of_the_new_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:inputType="phone"
                            android:maxLength="10" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_at_add_worker"
                        android:textColor="@color/colorAccentText"
                        android:textSize="15sp" />

                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/gender_at_add_student"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/male_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/female_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/female" />

                        <RadioButton
                            android:id="@+id/other_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/other" />

                    </RadioGroup>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/worker_type"
                        android:textColor="@color/colorAccentText"
                        android:textSize="15sp" />

                    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                        android:id="@+id/worker_type_at_add_worker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/manager_type_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/manager" />

                        <RadioButton
                            android:id="@+id/worker_type_radio_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:text="@string/worker" />

                    </RadioGroup>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:paddingTop="10dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email_id_of_new_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_id"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        app:passwordToggleDrawable="@drawable/passtogglevisiblebuttom"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent"
                        tools:ignore="NestedWeights">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password_of_the_new_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="80"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/confirm_password_of_the_new_user_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        app:passwordToggleDrawable="@drawable/passtogglevisiblebuttom"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorAccent"
                        tools:ignore="NestedWeights">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/confirm_password_of_the_new_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="80"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/duration"
                        android:textColor="@color/colorAccentText"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:weightSum="60">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="10"
                            android:text="@string/from"
                            android:textColor="@color/colorAccentText"
                            android:textSize="15sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/date_from_from_add_details"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="40"
                            android:text="@string/date_pattern_in_duration"
                            android:textColor="@color/colorAccent"
                            android:textSize="15sp" />

                        <ImageButton
                            android:id="@+id/set_date_from_from_add_details"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="10"
                            android:background="@color/zxing_transparent"
                            android:contentDescription="@string/time"
                            android:onClick="from_date_selector"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_date_range_black_24dp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:weightSum="60">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="10"
                            android:text="@string/to"
                            android:textColor="@color/colorAccentText"
                            android:textSize="15sp"
                            tools:ignore="NestedWeights" />

                        <TextView
                            android:id="@+id/date_to_from_add_details"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="40"
                            android:text="@string/date_pattern_in_duration"
                            android:textColor="@color/colorAccent"
                            android:textSize="15sp" />

                        <ImageButton
                            android:id="@+id/set_date_to_from_add_details"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="10"
                            android:background="@color/zxing_transparent"
                            android:contentDescription="@string/time"
                            android:onClick="to_date_selector"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_date_range_black_24dp" />

                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
