<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:ignore="ScrollViewSize,UselessParent">

        <ImageView
            android:id="@+id/user_profile_picture_at_student_or_management_login"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:contentDescription="@string/user_profile_picture" />
        <!--name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/name"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/Name_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--Email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/email"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/Email_id_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--Phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/phone_number"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/phone_number_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--Gender-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/gender"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/gender_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--Worker Type-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/type"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/worker_type_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/address"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/address_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--college-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/name_of_the_college"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/name_of_the_college_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--project-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/name_of_the_project"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/name_of_the_project_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>
        <!--duration-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/duration"
            android:textColor="#000000"
            android:textSize="20sp" />
        <!--from-to-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="40">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/from"
                android:textColor="#000000"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/from_date_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/to"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/to_date_of_the_current_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>